add currencies endpoint
